# morning-email-brief

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: deploy-auth.yml  publish.yml
auth-server/: .env.example  package-lock.json  package.json
auth-server/src/app/: globals.css  layout.tsx  page.tsx
auth-server/src/app/api/auth/callback/: route.ts
auth-server/src/app/api/auth/login/: route.ts
auth-server/src/app/api/auth/refresh/: route.ts
auth-server/src/app/auth/error/: page.tsx
auth-server/src/app/auth/success/: page.tsx
auth-server/src/app/privacy/: page.tsx
auth-server/src/app/terms/: page.tsx
cli/: pyproject.toml
cli/email_brief/: __init__.py  briefing.py  config.py  demo_asc.py  gmail_client.py  main.py  prefilter.py  prioritizer.py  prompts.py  renderer.py  storage.py  summarizer.py  types.py  utils.py
