[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morning-email-brief"
version = "1.0.0"
description = "AI-powered CLI tool that reads your Gmail, summarizes every email with AI, and tells you what to reply to first"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Rakhee Singh", email = "rakhisingh2811@gmail.com"},
]
keywords = [
    "email", "gmail", "ai", "llm", "groq", "llama",
    "email-summary", "email-automation", "productivity",
    "cli", "inbox-zero", "email-triage", "developer-tools", "email-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "groq>=0.4.0",
    "google-generativeai>=0.8.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/rakheesingh/morning-email-brief"
Repository = "https://github.com/rakheesingh/morning-email-brief"
"Bug Tracker" = "https://github.com/rakheesingh/morning-email-brief/issues"

[project.scripts]
email-brief = "email_brief.main:main"

[tool.setuptools.packages.find]
where = ["."]
